--- a/mindr/mindr/mindr/UIElements/XIBs/Popups/ReminderMenuPopup.xib
+++ b/mindr/mindr/mindr/UIElements/XIBs/Popups/ReminderMenuPopup.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="gsMenuPopup" propertyAccessControl="none">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReminderMenuPopup" propertyAccessControl="none">
             <connections>
                 <outlet property="backgroundImageView" destination="PHO-Uv-P85" id="0qL-ab-tqB"/>
                 <outlet property="containerViewHeightConstraint" destination="Yfo-j7-t6c" id="haP-dS-kfZ"/>
