--- a/g5Mindr/g5Mindr/XIBs/Cells/g5ConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/XIBs/Cells/g5ConditionTableViewCell.xib
@@ -12,13 +12,20 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iF5-5Z-djt" userLabel="Background Image">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-A0-geK" userLabel="View - Separator">
+                        <rect key="frame" x="0.0" y="79" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.22352941176470587" green="0.33333333333333331" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="RiL-qm-vMk"/>
+                        </constraints>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wb7-sG-iys" userLabel="Icon Image">
                         <rect key="frame" x="20" y="20" width="40" height="40"/>
                         <constraints>
@@ -35,7 +42,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bZz-qG-pb2">
+                    <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bZz-qG-pb2">
                         <rect key="frame" x="263" y="24" width="51" height="31"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="HIw-2f-ndc"/>
@@ -47,27 +54,38 @@
                             <action selector="didToddleActivationSwitch:" destination="KGk-i7-Jjw" eventType="valueChanged" id="ROZ-H9-y0r"/>
                         </connections>
                     </switch>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-A0-geK" userLabel="View - Separator">
-                        <rect key="frame" x="0.0" y="78.5" width="320" height="1"/>
-                        <color key="backgroundColor" red="0.22352941176470587" green="0.33333333333333331" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="RiL-qm-vMk"/>
-                        </constraints>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MSn-1X-6ND" userLabel="View - Custom Switch" customClass="OnSwitchView">
+                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvU-aJ-30c">
+                        <rect key="frame" x="263" y="24" width="49" height="31"/>
+                        <connections>
+                            <action selector="didPressSwitchButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7uM-Vc-KUB"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="1sF-lx-p73"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4c7-fX-FOW"/>
                     <constraint firstItem="Ga2-Lj-lva" firstAttribute="leading" secondItem="wb7-sG-iys" secondAttribute="trailing" constant="8" id="5Q8-3h-fJ9"/>
+                    <constraint firstItem="MSn-1X-6ND" firstAttribute="centerX" secondItem="bZz-qG-pb2" secondAttribute="centerX" id="5ej-NB-4V0"/>
                     <constraint firstAttribute="bottom" secondItem="aTM-A0-geK" secondAttribute="bottom" id="CC3-Iq-0bV"/>
                     <constraint firstItem="iF5-5Z-djt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Di4-Sh-Xqj"/>
+                    <constraint firstItem="MSn-1X-6ND" firstAttribute="centerY" secondItem="bZz-qG-pb2" secondAttribute="centerY" id="Huv-eV-8pZ"/>
                     <constraint firstItem="wb7-sG-iys" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KVj-CP-5DK"/>
+                    <constraint firstItem="QvU-aJ-30c" firstAttribute="height" secondItem="MSn-1X-6ND" secondAttribute="height" id="Kb5-VJ-tQ0"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="leading" secondItem="Ga2-Lj-lva" secondAttribute="trailing" constant="8" id="MJo-cq-kNt"/>
                     <constraint firstAttribute="trailing" secondItem="iF5-5Z-djt" secondAttribute="trailing" id="Mew-hg-hBI"/>
+                    <constraint firstItem="QvU-aJ-30c" firstAttribute="centerX" secondItem="MSn-1X-6ND" secondAttribute="centerX" id="U2T-Tg-McC"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Ulw-XF-7R9"/>
+                    <constraint firstItem="MSn-1X-6ND" firstAttribute="height" secondItem="bZz-qG-pb2" secondAttribute="height" id="VQn-b6-87K"/>
                     <constraint firstItem="aTM-A0-geK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XVV-ih-lwe"/>
+                    <constraint firstItem="MSn-1X-6ND" firstAttribute="width" secondItem="bZz-qG-pb2" secondAttribute="width" id="YFw-BW-if6"/>
+                    <constraint firstItem="QvU-aJ-30c" firstAttribute="centerY" secondItem="MSn-1X-6ND" secondAttribute="centerY" id="cma-1n-nwW"/>
                     <constraint firstItem="Ga2-Lj-lva" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qh4-vP-0Kq"/>
+                    <constraint firstItem="QvU-aJ-30c" firstAttribute="width" secondItem="MSn-1X-6ND" secondAttribute="width" id="wqN-9J-0Sd"/>
                     <constraint firstAttribute="trailing" secondItem="aTM-A0-geK" secondAttribute="trailing" id="xfp-Sg-Rjo"/>
                     <constraint firstAttribute="bottom" secondItem="iF5-5Z-djt" secondAttribute="bottom" id="ylw-C3-wbf"/>
                     <constraint firstItem="bZz-qG-pb2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zsc-Ie-Srw"/>
@@ -79,6 +97,7 @@
                 <outlet property="conditionActivationSwitch" destination="bZz-qG-pb2" id="UlC-89-Nko"/>
                 <outlet property="conditionExplanationLabel" destination="Ga2-Lj-lva" id="qBi-dL-Du4"/>
                 <outlet property="conditionIconImageView" destination="wb7-sG-iys" id="pNb-cG-jtD"/>
+                <outlet property="onSwitch" destination="MSn-1X-6ND" id="sbi-UQ-4PY"/>
             </connections>
         </tableViewCell>
     </objects>
