Got the Button Animations Working

--- a/g5Mindr/g5Mindr/XIBs/g5ReminderListViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderListViewController.xib
@@ -7,9 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5ReminderListViewController">
             <connections>
+                <outlet property="backButtonBackground" destination="43e-Lo-CK2" id="jvc-Wt-LGF"/>
+                <outlet property="backButtonContainerView" destination="IjJ-lc-C2D" id="8Mk-qq-jsc"/>
                 <outlet property="centerButtonBottomConstraint" destination="uNk-PM-xpg" id="YdY-ie-WLL"/>
                 <outlet property="centerButtonHeightConstraint" destination="Rpd-l1-bQZ" id="g2W-bH-suw"/>
                 <outlet property="createReminderButtonBackgroundImage" destination="rn1-kR-7VZ" id="GbP-au-Mpw"/>
+                <outlet property="nextButtonBackground" destination="fNq-rv-9gl" id="S6I-Rb-C1K"/>
+                <outlet property="nextButtonContainerView" destination="uEN-4M-Brb" id="DlX-3c-QNd"/>
                 <outlet property="reminderTableView" destination="uw2-LS-xDB" id="AzV-MX-hoD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,7 +27,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" red="0.18823529410000001" green="0.37647058820000001" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uw2-LS-xDB" userLabel="TableView - Reminder">
+                <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uw2-LS-xDB" userLabel="TableView - Reminder">
                     <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -32,6 +36,68 @@
                         <outlet property="delegate" destination="-1" id="XpM-NT-ar6"/>
                     </connections>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uEN-4M-Brb">
+                    <rect key="frame" x="535" y="535" width="130" height="130"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fNq-rv-9gl" userLabel="Background - Next">
+                            <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="65" id="7PS-yh-YEP"/>
+                                <constraint firstAttribute="height" constant="65" id="APt-4S-oGr"/>
+                            </constraints>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLp-2l-R6L" userLabel="Button - Next">
+                            <rect key="frame" x="21" y="21" width="44" height="44"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="ZyR-78-X2g"/>
+                                <constraint firstAttribute="width" constant="44" id="oen-zJ-vNG"/>
+                            </constraints>
+                            <state key="normal" title="N"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="fNq-rv-9gl" firstAttribute="leading" secondItem="uEN-4M-Brb" secondAttribute="leading" id="6fh-O2-p8d"/>
+                        <constraint firstItem="fNq-rv-9gl" firstAttribute="top" secondItem="uEN-4M-Brb" secondAttribute="top" id="Q1H-cB-1mQ"/>
+                        <constraint firstAttribute="width" constant="130" id="a4X-Pi-ogp"/>
+                        <constraint firstItem="rLp-2l-R6L" firstAttribute="trailing" secondItem="fNq-rv-9gl" secondAttribute="trailing" id="jBf-Wa-7LN"/>
+                        <constraint firstAttribute="height" constant="130" id="jiG-MQ-Jxa"/>
+                        <constraint firstItem="rLp-2l-R6L" firstAttribute="bottom" secondItem="fNq-rv-9gl" secondAttribute="bottom" id="xyR-a3-gx5"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IjJ-lc-C2D">
+                    <rect key="frame" x="-65" y="535" width="130" height="130"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="43e-Lo-CK2" userLabel="Background - Back">
+                            <rect key="frame" x="65" y="0.0" width="65" height="65"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="65" id="5Aw-cd-AaT"/>
+                                <constraint firstAttribute="height" constant="65" id="tPt-tS-9dQ"/>
+                            </constraints>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMY-Wn-pBc" userLabel="Button - Back">
+                            <rect key="frame" x="65" y="21" width="44" height="44"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <accessibility key="accessibilityConfiguration" label="Button - Back"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="44" id="2Zk-hY-YaU"/>
+                                <constraint firstAttribute="height" constant="44" id="VF1-hh-spz"/>
+                            </constraints>
+                            <state key="normal" title="X"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="130" id="1A3-zu-uc9"/>
+                        <constraint firstItem="xMY-Wn-pBc" firstAttribute="bottom" secondItem="43e-Lo-CK2" secondAttribute="bottom" id="RfT-tp-ura"/>
+                        <constraint firstItem="43e-Lo-CK2" firstAttribute="top" secondItem="IjJ-lc-C2D" secondAttribute="top" id="mGo-Qq-j3M"/>
+                        <constraint firstAttribute="width" constant="130" id="mYm-tK-SXK"/>
+                        <constraint firstItem="xMY-Wn-pBc" firstAttribute="leading" secondItem="43e-Lo-CK2" secondAttribute="leading" id="tKE-3q-7xi"/>
+                        <constraint firstAttribute="trailing" secondItem="43e-Lo-CK2" secondAttribute="trailing" id="tkz-Kv-1ig"/>
+                    </constraints>
+                </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rn1-kR-7VZ" userLabel="Background Create Reminder">
                     <rect key="frame" x="245" y="545" width="110" height="55"/>
                     <constraints>
@@ -92,7 +158,9 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2UO-nB-EVQ" secondAttribute="trailing" id="0FE-Xb-qLo"/>
+                <constraint firstItem="IjJ-lc-C2D" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="-65" id="6SS-cA-nTa"/>
                 <constraint firstItem="uw2-LS-xDB" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="7yX-bM-EZ1"/>
+                <constraint firstAttribute="trailing" secondItem="uEN-4M-Brb" secondAttribute="trailing" constant="-65" id="8Uc-vA-oTY"/>
                 <constraint firstAttribute="bottom" secondItem="uw2-LS-xDB" secondAttribute="bottom" id="96a-OP-wXy"/>
                 <constraint firstItem="YEV-Fs-vfi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9tD-Ex-4qw"/>
                 <constraint firstAttribute="trailing" secondItem="uw2-LS-xDB" secondAttribute="trailing" id="AY4-53-r4b"/>
@@ -104,13 +172,17 @@
                 <constraint firstItem="rn1-kR-7VZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aiq-gx-D1G"/>
                 <constraint firstItem="YEV-Fs-vfi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gEU-E9-Sau"/>
                 <constraint firstAttribute="bottom" secondItem="ERZ-VW-qkk" secondAttribute="bottom" id="ieE-CL-lrd"/>
+                <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="181" id="jqV-8T-vZD"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="rn1-kR-7VZ" secondAttribute="bottom" id="lgC-az-Vs2"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerX" secondItem="rn1-kR-7VZ" secondAttribute="centerX" id="oZt-o8-cHf"/>
                 <constraint firstAttribute="trailing" secondItem="YEV-Fs-vfi" secondAttribute="trailing" id="p7a-JH-p2v"/>
+                <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="-65" id="pI9-cO-jUd"/>
                 <constraint firstAttribute="bottom" secondItem="uw2-LS-xDB" secondAttribute="bottom" id="qAw-BO-ttj"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="qYm-E8-yOH"/>
+                <constraint firstAttribute="bottom" secondItem="IjJ-lc-C2D" secondAttribute="bottom" constant="-65" id="tbO-W0-nhe"/>
                 <constraint firstItem="uw2-LS-xDB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uLi-6E-hzL"/>
                 <constraint firstAttribute="bottom" secondItem="rn1-kR-7VZ" secondAttribute="bottom" id="uNk-PM-xpg" userLabel="Center Button Bottom"/>
+                <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="65" id="uR5-eq-qvn"/>
                 <constraint firstAttribute="bottom" secondItem="YEV-Fs-vfi" secondAttribute="bottom" id="vlK-tn-Ahc"/>
                 <constraint firstItem="2UO-nB-EVQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="wCw-70-Jch"/>
             </constraints>
@@ -121,8 +193,10 @@
                     <exclude reference="Z7X-rt-Wfq"/>
                     <exclude reference="XH5-Z5-Xfu"/>
                     <exclude reference="ieE-CL-lrd"/>
+                    <exclude reference="jqV-8T-vZD"/>
                     <exclude reference="lgC-az-Vs2"/>
                     <exclude reference="qYm-E8-yOH"/>
+                    <exclude reference="uR5-eq-qvn"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="120" y="361"/>
